--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <button type="submit">Odebírat newsletter</button>     
                </form>
                <br>
-               <a href="http://127.0.0.1:5500/index2.html" class="button-link">Pokračovat bez popupu</a>
+               <a href="index2.html" class="button-link">Pokračovat bez popupu</a>
                <br><br>
               
               <svg xmlns="http://www.w3.org/2000/svg" viewbox="-2 -2 580 516">
